@@ -10,6 +10,8 @@ Zope Changes
 
     New features
 
+      - addMenuItem directive supports a `layer` attribute.
+
       - Formalized the Publisher Response API.
 
         + Until now the publisher made assumptions about the form of ouput of
@@ -71,7 +73,7 @@ Zope Changes
 
     Much thanks to everyone who contributed to this release:
 
-      Stephan Richter, Roger Ineichen, Marius Gedminas
+      Stephan Richter, Roger Ineichen, Marius Gedminas, Julien Anguenot
 
     Note: If you are not listed and contributed, please add yourself. This
           note will be deleted before the release.
